Listen click event

--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
   </div>
 
 <script>
+const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+console.log(checkboxes);
+
+handleCheck = e => console.log(e);
+
+checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
+
 </script>
 </body>
 </html>
